<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <SearchView
        android:id="@+id/concerts_search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:iconifiedByDefault="false"
        android:inputType="textPersonName"
        android:queryHint="@string/search_view" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/concerts_rv_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:scrollbarStyle="insideOverlay"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="1"
            tools:listitem="@layout/model_concert">

        </androidx.recyclerview.widget.RecyclerView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/concerts_bt_scroll_up"
            style="@style/FabScrollUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true" />

        <LinearLayout
            android:id="@+id/concerts_rv_band_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recycler_view_empty_band"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/concerts_rv_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recycler_view_concerts_empty"
                android:textSize="16sp" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/concerts_fab_tv_filter"
                style="@style/FabTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/concert_fab_filter"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/concerts_bt_filter"
                app:layout_constraintEnd_toStartOf="@+id/concerts_bt_filter"
                app:layout_constraintTop_toTopOf="@+id/concerts_bt_filter" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/concerts_bt_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:layout_marginVertical="8dp"
                android:clickable="true"
                android:contentDescription="@string/content_description_bt_filter"
                android:visibility="invisible"
                app:backgroundTint="@color/fab_filter"
                app:layout_constraintBottom_toTopOf="@+id/concerts_bt_add"
                app:layout_constraintEnd_toEndOf="@+id/concerts_bt_add"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                app:layout_constraintVertical_chainStyle="packed"
                app:srcCompat="@drawable/ic_filter" />

            <TextView
                android:id="@+id/concerts_fab_tv_add"
                style="@style/FabTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/concert_fab_add"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/concerts_bt_add"
                app:layout_constraintEnd_toStartOf="@+id/concerts_bt_add"
                app:layout_constraintTop_toTopOf="@+id/concerts_bt_add" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/concerts_bt_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginVertical="8dp"
                android:clickable="true"
                android:contentDescription="@string/content_description_bt_add"
                android:visibility="invisible"
                app:backgroundTint="@color/fab_add"
                app:layout_constraintBottom_toTopOf="@+id/concerts_bt_options"
                app:layout_constraintEnd_toEndOf="@+id/concerts_bt_options"
                app:layout_constraintTop_toBottomOf="@+id/concerts_bt_filter"
                app:srcCompat="@drawable/ic_add_white" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/concerts_bt_options"
                style="@style/Widget.Material3.FloatingActionButton.Large.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:contentDescription="@string/content_description_bt_options"
                android:tooltipText="@string/content_description_bt_options"
                app:backgroundTint="@color/fab_options"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/concerts_bt_add"
                app:srcCompat="@drawable/ic_camera" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>