...
        app:layout_constraintBottom_toTopOf="@+id/concert_et_date_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/concert_et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/et_name"
            android:inputType="textPersonName"
...
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/concert_et_name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/concert_et_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/et_date"
            android:inputType="date"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/concert_et_date_layout"
        app:layout_constraintTop_toTopOf="@+id/concert_et_date_layout" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/concert_et_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/et_time"
            android:inputType="time"
...
        app:layout_constraintBottom_toTopOf="@+id/concert_et_country_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/concert_et_date_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/concert_et_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/concert_field_city"
            android:inputType="textPersonName"
...
        app:layout_constraintBottom_toTopOf="@+id/concert_et_place_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/concert_et_city_layout" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/concert_et_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/concert_field_country"
            android:inputType="textPersonName"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:autofillHints="@string/et_type"
        android:contentDescription="@string/content_description_spinner_type"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/concert_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/concert_et_duration_layout" />

    <Button
        android:id="@+id/concert_button"
...
